--- a/src/app/view/blog/blog.component.html
+++ b/src/app/view/blog/blog.component.html
@@ -22,9 +22,7 @@
                     <div id="templatic_text-1" class="widget templatic_text">
                         <div class="widget-wrap widget-inside">		
                             <div class="textwidget text-center">	
-                                <a href="">
-                                    <img src="app/assets/images/ads images/728x90.jpg">
-                                </a>	
+                                <iframe scrolling="no" width="100%" height="100" src="http://2016.geekmeet.com/banner.php?title=blog-728x90"></iframe> 
                             </div>
                         </div>
                     </div>
@@ -49,7 +47,7 @@
                                 <a class="url fn n"  title="Smith">{{blog.username}}</a>
                             </span> On 
                             <abbr class="published" title="{{blog.create_date}}">{{blog.create_date}}</abbr> 
-                            <a class="comments-link" href="" title="Comment on Reservation and Booking System + Multilevel Category Selection">Leave a response</a> 
+                          
                         </div>			
                         <p class="entry-summary" [innerHTML]="blog.blog_content"></p>
                         <a *ngIf="blog.read_more==1" [routerLink]="['/blog_detail',blog.blog_id]" >Read More</a> 				  
@@ -85,30 +83,30 @@
             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">		
                     <div class="textwidget text-center">	
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x600.jpg">
-                        </a>	
+                     
+                            <iframe scrolling="no" width="100%" height="600" src="http://2016.geekmeet.com/banner.php?title=blog-300x600"></iframe> 
+                      
                     </div>
                 </div>
             </div>
+
+
 
             <div id="social_media-3" class="widget social_media">
                 <div class="widget-wrap widget-inside">
                     <h3 class="widget-title">Connect With Us</h3>
                     <div class="social_media">
                         <ul class="social_media_list">
-                            <li> <a href="http://facebook.com/" target="_blank">
+                            <li> <a href="https://www.facebook.com/GeekMeet/" target="_blank">
                                     <i class="fa fa-facebook"></i>Find us on Facebook </a> </li>
-                            <li> <a href="http://twitter.com/" target="_blank">
+                            <li> <a href="https://twitter.com/geekmeet" target="_blank">
                                     <i class="fa fa-twitter"></i>Follow us on Twitter </a> </li>
-                            <li> <a href="http://www.youtube.com/" target="_blank">
-                                    <i class="fa fa-youtube"></i>Find us on Youtube </a> </li>
-                            <li> <a href="http://www.linkedin.com/" target="_blank">
+                          
+                            <li> <a href="https://www.linkedin.com/company/geekmeet" target="_blank">
                                     <i class="fa fa-linkedin"></i>Connect with us on LinkedIn </a> </li>
-                            <li> <a href="http://www.googleplus.com/" target="_blank">
+                            <li> <a href="https://plus.google.com/+Geekmeet" target="_blank">
                                     <i class="fa fa-google-plus"></i>Find us on Google+ </a> </li>
-                            <li> <a href="http://www.pintrest.com/" target="_blank">
-                                    <i class="fa fa-pinterest"></i>Find us on Pinterest </a> </li>
+                           
                         </ul>
                     </div>
                 </div>
@@ -118,9 +116,8 @@
             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">		
                     <div class="textwidget text-center">	
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x250.jpg">
-                        </a>	
+                     <iframe scrolling="no" width="100%" height="300" src="http://2016.geekmeet.com/banner.php?title=blog-300x250"></iframe> 
+                        
                     </div>
                 </div>
             </div>
