--- a/src/app/view/event/event.component.html
+++ b/src/app/view/event/event.component.html
@@ -15,9 +15,9 @@
 
     <div id="content" class="contentarea large-9 small-12 columns ">
         <h1 class="loop-title">Events 
-           <a *ngIf = "!getToken" data-toggle="modal" data-target="#loginModal" class="btn btn-warning pull-right" href="javascript:void(0);">Add Event</a>
+           <!-- <a *ngIf = "!getToken" data-toggle="modal" data-target="#loginModal" class="btn btn-warning pull-right" href="javascript:void(0);">Add Event</a> -->
 
-            <a *ngIf = "getToken" class="btn btn-warning pull-right" href="" [routerLink]="['/eventadd']" >Add Event</a>
+            <!-- <a *ngIf = "getToken" class="btn btn-warning pull-right" href="" [routerLink]="['/eventadd']" >Add Event</a> -->
         </h1>
            
         <!-- 728x90 ad_space -->
@@ -252,35 +252,39 @@
                         </div>
                     </div>
             <!-- 300x250 ad_space -->
-            <div id="templatic_text-1" class="widget templatic_text">
-                <div class="widget-wrap widget-inside">		
-                    <div class="textwidget text-center">	
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x250.jpg">
-                        </a>	
+              <div id="templatic_text-1" class="widget templatic_text">
+                <div class="widget-wrap widget-inside">     
+                    <div class="textwidget text-center">    
+                       <iframe scrolling="no" width="100%" height="600" src="http://2016.geekmeet.com/banner.php?title=event-300x600"></iframe>     
                     </div>
                 </div>
             </div>
 
-            <!-- 300x600 ad_space -->
-            <div id="templatic_text-1" class="widget templatic_text">
-                <div class="widget-wrap widget-inside">		
-                    <div class="textwidget text-center">	
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x600.jpg">
-                        </a>	
+            <div id="social_media-3" class="widget social_media">
+                <div class="widget-wrap widget-inside">
+                    <h3 class="widget-title">Connect With Us</h3>
+                    <div class="social_media">
+                          <ul class="social_media_list">
+                            <li> <a href="https://www.facebook.com/GeekMeet/" target="_blank">
+                                    <i class="fa fa-facebook"></i>Find us on Facebook </a> </li>
+                            <li> <a href="https://twitter.com/geekmeet" target="_blank">
+                                    <i class="fa fa-twitter"></i>Follow us on Twitter </a> </li>
+                          
+                            <li> <a href="https://www.linkedin.com/company/geekmeet" target="_blank">
+                                    <i class="fa fa-linkedin"></i>Connect with us on LinkedIn </a> </li>
+                            <li> <a href="https://plus.google.com/+Geekmeet" target="_blank">
+                                    <i class="fa fa-google-plus"></i>Find us on Google+ </a> </li>
+                           
+                        </ul>
                     </div>
                 </div>
             </div>
 
-
-            <!-- 300x150 ad_space -->
+            <!-- 300x250 ad_space -->
             <div id="templatic_text-1" class="widget templatic_text">
-                <div class="widget-wrap widget-inside">		
-                    <div class="textwidget text-center">	
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x150.jpg">
-                        </a>	
+                <div class="widget-wrap widget-inside">     
+                    <div class="textwidget text-center">    
+                         <iframe scrolling="no" width="100%" height="300" src="http://2016.geekmeet.com/banner.php?title=event-300x250"></iframe>        
                     </div>
                 </div>
             </div>
