--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -41,7 +41,7 @@
                                         </nav>
                                     </div>
                                 </div>
-                                <div id="directory_search_location-1" class="widget search_key">
+                              <!--   <div id="directory_search_location-1" class="widget search_key">
                                     <div class="widget-wrap widget-inside">
                                         <div class="search_nearby_widget what_fld_search">          
                                             <form name="searchform_662496511" method="get" class="searchform_662496511 allinone" id="searchform" action="" style="position:relative;">
@@ -56,11 +56,11 @@
                                                 <input type="hidden" name="t" value="acebef955d">
                                                 <input type="hidden" name="relation" class="sgo" value="OR">
                                                 <input type="submit" class="sgo" value="Search">
-                                                <!--<ul id="search-result" class="ui-autocomplete ui-front ui-menu ui-widget ui-widget-content ui-corner-all" style="display:none;"></ul>-->
+                                               
                                             </form>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </aside>
                             <!-- #sidebar-header right end -->
                         </div>
@@ -102,7 +102,7 @@
                                     </li>
                                     <li class=""><a href="" [routerLink]="['/blog']" > Blog</a></li><!-- 
                                     <li class=""><a href="" [routerLink]="['/sponsors']">Sponsors</a></li> -->
-                                         <li class=""><a href="javascript:void(0)">Sponsors</a></li>
+                                         <!-- <li class=""><a href="javascript:void(0)">Sponsors</a></li> -->
                                     <!-- <li class=""><a href="" [routerLink]="['/contactus']">Contact Us</a></li> -->
                                     <li data-toggle="modal" data-target="#loginModal" id="signInFormModal" class="tmpl-login" *ngIf = "!getToken"><a>Sign In</a></li>
                                     <!--<li class="tmpl-login"><a href="">Logout</a></li>-->
