--- a/src/app/assets/css/event/event.component.css
+++ b/src/app/assets/css/event/event.component.css
@@ -10,3 +10,13 @@
 	color: red;
 	font-size: 13px;
 }
+
+.new_icon {
+    color: #999;
+    font-size: 15px;
+    font-weight: normal;
+    height: 20px;
+    margin-left: 2px;
+    text-align: left;
+    width: 15px;
+}
