--- a/src/app/assets/css/index/index.component.css
+++ b/src/app/assets/css/index/index.component.css
@@ -18,3 +18,13 @@
     border-bottom: medium none !important;
 }
 #server ul li  { border:none !important;}
+
+.new_icon {
+    color: #999;
+    font-size: 15px;
+    font-weight: normal;
+    height: 20px;
+    margin-left: 2px;
+    text-align: left;
+    width: 15px;
+}
