--- a/src/app/assets/css/search/search.component.css
+++ b/src/app/assets/css/search/search.component.css
@@ -10,4 +10,13 @@
     position: static;
     width: 20%;
 }
+.new_icon {
+    color: #999;
+    font-size: 15px;
+    font-weight: normal;
+    height: 20px;
+    margin-left: 2px;
+    text-align: left;
+    width: 15px;
+}
         
