--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -101,7 +101,7 @@
                                 </span>
                                 <p class="website" *ngIf="data.event_data.website!=''">
                                     <label>Website: </label>
-                                    <span class="event_custom"><a id="website" class="frontend_website " href="{{data.event_data.website}}">{{data.event_data.website}}</a></span>
+                                    <span class="event_custom"><a target="_blank" id="website" class="frontend_website " href="{{data.event_data.website}}">{{data.event_data.website}}</a></span>
                                 </p>
                                 <span *ngIf = "getToken">
                                 <p class="phone" *ngIf="data.event_data.contact_info!=''">
@@ -192,9 +192,7 @@
                     <div id="templatic_text-1" class="widget templatic_text">
                         <div class="widget-wrap widget-inside">     
                             <div class="textwidget text-center">    
-                                <a href="">
-                                    <img src="app/assets/images/ads images/728x90.jpg">
-                                </a>    
+                               <iframe scrolling="no" width="100%" height="100" src="http://2016.geekmeet.com/banner.php?title=event-728x90"></iframe>   
                             </div>
                         </div>
                     </div>
@@ -237,7 +235,7 @@
                                 <p class="website" *ngIf="data.event_data.organization_website!=''">
                                     <label>Website:</label>
                                     <span class="label_data frontend_organizer_website">
-                                        <a target="_blank" href="">{{data.event_data.organization_website}}</a>
+                                        <a target="_blank" href="{{data.event_data.organization_website}}">{{data.event_data.organization_website}}</a>
                                     </span>
                                 </p>
                             </div>
@@ -315,9 +313,7 @@
                 <div id="templatic_text-1" class="widget templatic_text">
                     <div class="widget-wrap widget-inside m-t-20">      
                         <div class="textwidget text-center">    
-                            <a href="">
-                                <img src="app/assets/images/ads images/728x90.jpg">
-                            </a>    
+                           <iframe scrolling="no" width="100%" height="100" src="http://2016.geekmeet.com/banner.php?title=event-728x90"></iframe>     
                         </div>
                     </div>
                 </div>
@@ -593,9 +589,7 @@
                <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside m-t-20">      
                     <div class="textwidget text-center">    
-                        <a href="">
-                            <img src="app/assets/images/ads images/728x90.jpg">
-                        </a>    
+                    <iframe scrolling="no" width="100%" height="100" src="http://2016.geekmeet.com/banner.php?title=event-728x90"></iframe>     
                     </div>
                 </div>
             </div>
@@ -630,7 +624,11 @@
                             <!--end post type title -->
                             <!-- Entry details start -->
                             <div class="entry-details">
-
+                               
+                                                        <p><i class="fa fa-building-o new_icon"></i>
+                                                        {{related_events.city_name}},                      {{related_events.state_name}},  
+                                                         {{related_events.country_name}}                
+                                                         </p>
                                  <p class="event_date">
                                                             <span>
                                                                 <span itemprop="startDate" content="2014-07-08T22:00">{{related_events.start_date}}</span>
@@ -650,7 +648,8 @@
                 </div>
               
                 
-            </div>    
+            </div>   
+
         </div>
         <!-- #content --> 
 
@@ -661,9 +660,8 @@
             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">     
                     <div class="textwidget text-center">    
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x250.jpg">
-                        </a>    
+                      
+                        <iframe scrolling="no" width="100%" height="300" src="http://2016.geekmeet.com/banner.php?title=event-300x250"></iframe>     
                     </div>
                 </div>
             </div>
@@ -672,9 +670,7 @@
             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">     
                     <div class="textwidget text-center">    
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x600.jpg">
-                        </a>    
+                         <iframe scrolling="no" width="100%" height="600" src="http://2016.geekmeet.com/banner.php?title=event-300x600"></iframe>   
                     </div>
                 </div>
             </div>
@@ -702,7 +698,7 @@
                     </div>
 
                     <!-- 300x150 ad_space -->
-                    <div id="templatic_text-1" class="widget templatic_text">
+                   <!--  <div id="templatic_text-1" class="widget templatic_text">
                         <div class="widget-wrap widget-inside">     
                             <div class="textwidget text-center">    
                                 <a href="">
@@ -710,7 +706,7 @@
                                 </a>    
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <!--end single post type sidebar --> 
                 <!-- end  content part-->
