--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -77,10 +77,16 @@
                         <div class="social_media widget-wrap widget-inside">
                             <h3 class="widget-title">Social</h3>            
                             <ul class="social_media_list">
-                                <li> <a href="http://facebook.com/" target="_blank">
-                                    <i class="fa fa-facebook"></i>
-                                </a> 
-                            </li>           
+                                 <li> <a href="https://www.facebook.com/GeekMeet/" target="_blank">
+                                    <i class="fa fa-facebook"></i></a> </li>
+                            <li> <a href="https://twitter.com/geekmeet" target="_blank">
+                                    <i class="fa fa-twitter"></i></a> </li>
+                          
+                            <li> <a href="https://www.linkedin.com/company/geekmeet" target="_blank">
+                                    <i class="fa fa-linkedin"></i></a> </li>
+                            <li> <a href="https://plus.google.com/+Geekmeet" target="_blank">
+                                    <i class="fa fa-google-plus"></i></a> </li>
+          
                         </ul>
                     </div>
                 </div>              
