--- a/src/app/view/my-organizations/my-organizations.component.html
+++ b/src/app/view/my-organizations/my-organizations.component.html
@@ -38,7 +38,7 @@
 							</div>
 							<div class="form-group" *ngIf="org.organization_website!=''">
 								<label class="col-sm-1 control-label"><i class="fa fa-globe"></i></label>
-								<span class="col-sm-10">{{org.organization_website}}</span>
+								<span class="col-sm-10"><a target="_blank" id="website" class="frontend_website " href="{{org.organization_website}}">{{org.organization_website}}</a></span>
 							</div>
 													</div>
                     </div> 	
