--- a/src/app/view/blog-detail/blog-detail.component.html
+++ b/src/app/view/blog-detail/blog-detail.component.html
@@ -66,9 +66,7 @@
             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">		
                     <div class="textwidget text-center">	
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x600.jpg">
-                        </a>	
+                         <iframe scrolling="no" width="100%" height="600" src="http://2016.geekmeet.com/banner.php?title=blog-300x600"></iframe> 	
                     </div>
                 </div>
             </div>
@@ -99,9 +97,8 @@
             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">		
                     <div class="textwidget text-center">	
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x250.jpg">
-                        </a>	
+                       	
+                          <iframe scrolling="no" width="100%" height="600" src="http://2016.geekmeet.com/banner.php?title=blog-300x250"></iframe> 
                     </div>
                 </div>
             </div>
