--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -149,23 +149,19 @@
         <!--single post type sidebar -->
         <div id="sidebar-primary" class="sidebar large-3 small-12 columns">
             <!-- 300x600 ad_space -->
-            <div id="templatic_text-1" class="widget templatic_text">
+             <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">     
                     <div class="textwidget text-center">    
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x600.jpg">
-                        </a>    
+                       <iframe scrolling="no" width="100%" height="600" src="http://2016.geekmeet.com/banner.php?title=event-300x600"></iframe>     
                     </div>
                 </div>
             </div>
             
             <!-- 300x150 ad_space -->
-            <div id="templatic_text-1" class="widget templatic_text">
+               <div id="templatic_text-1" class="widget templatic_text">
                 <div class="widget-wrap widget-inside">     
                     <div class="textwidget text-center">    
-                        <a href="">
-                            <img src="app/assets/images/ads images/300x150.jpg">
-                        </a>    
+                         <iframe scrolling="no" width="100%" height="300" src="http://2016.geekmeet.com/banner.php?title=event-300x250"></iframe>        
                     </div>
                 </div>
             </div>
