--- a/src/app/view/reset-password/reset-password.component.html
+++ b/src/app/view/reset-password/reset-password.component.html
@@ -31,7 +31,7 @@
                         </ul>  
                     </div>
                     <div class="form_row ">
-                        <button class="btn btn-info" type="submit">Save</button>
+                        <button class="btn btn-info" type="submit">Send</button>
                     <button class="btn btn-info" type="reset" [routerLink]="['/']" >Cancel</button>
                     </div>
                 </div>
