--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -26,6 +26,34 @@
                         <!-- </hgroup> -->
                     </div>
 
+                     <div id="menu-primary" class="menu-container">
+                        <nav role="navigation" class="wrap">
+                            <div id="menu-primary-title">
+                                Menu                
+                            </div>
+                            <!-- #menu-primary-title -->
+                            <div class="menu">
+                                <ul id="menu-primary-items" class="primary_menu clearfix">
+                                       
+                                    <li class="tmpl-login" *ngIf = "getToken"><a class="text-white" style="padding: 19px 19px">
+                                                  <img src="{{user_avatar}}" style="height: 30px;width: 30px;border-radius: 15px;"><p style="float: right;margin-left: 5px;padding:2px;">{{user_name}}</p></a>
+                                        <ul class="sub-menu">
+                                            <li class=""><a href="" [routerLink]="['/profile']">Profile</a></li>
+                                            <li class=""><a href="" [routerLink]="['/my-organizations']">My Organizations</a></li>
+                                            <!-- <li class=""><a href="" [routerLink]="['/my-venues']">My Venue's</a></li> -->
+                                            <li class=""><a href="" [routerLink]="['/my-events']">My Events</a></li>
+                                            <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li>
+                                            <li class=""><a href="" [routerLink]="['/notification-setting']">Notification Settings</a></li> 
+                                            <li class=""><a href="" [routerLink]="['/changepassword']">Change Password</a></li>
+                                            <li class="" (click) = "userLogout()"><a>Logout</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>            
+                        </nav>
+                    </div>
+
+
                     <div class="large-8 columns">
                         <div class="header-widget-wrap">
                             <!-- #sidebar-header right start -->
@@ -36,10 +64,8 @@
                                             <ul id="menu-submit-event" class="nav-menu">
                                                 <li *ngIf = "getToken" id="menu-item-9371" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9371"><a class="text-white" href=""[routerLink]="['/eventadd']">Submit Event <i class="fa fa-plus"></i></a></li>
                                                  <li *ngIf = "!getToken" id="menu-item-9371" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9371"><a class="text-white" href="" data-toggle="modal" data-target="#loginModal">Submit Event <i class="fa fa-plus"></i></a></li>
-                                                  <li *ngIf = "getToken" id="menu-item-9371" class="menu-item menu-item-type-post_type menu-item-object-page"><a class="text-white">
-                                                  <img src="{{user_avatar}}" style="height: 30px;width: 30px;border-radius: 15px;"><p style="float: right;margin-left: 5px;padding:2px;">{{user_name}}</p></a></li>
                                             </ul>
-                                        </nav>
+                                        </nav>                                    
                                     </div>
                                 </div>
                               <!--   <div id="directory_search_location-1" class="widget search_key">
@@ -70,11 +96,18 @@
                    <div class="location_fld_wrapper"> 
                       
                         <div id="loc_city_link" class="toggle_handler primary_location" data-location="location_aslink">
-                            <a id="directorytab"  class=""><img src="app/assets/images/flags/us.png" width="18" height="12" alt="New York"> New York<i class="fa fa-angle-down"></i></a>
+                            <a id="directorytab"  class="">
+                               <!--  <ng-select id="countryList" name="countryList" 
+                                (data)="countryArr"                                                      
+                            [items]="countryArr"                           
+                            (selected)="changeCountry($event)"
+                            placeholder="No country selected">
+                            </ng-select> -->
+                                </a>
                         </div>
                         <div id="directory_location_navigation" class="d_location_type_navigation clearfix">
                             <div id="location_navigation_wrap">
-                                <div id="horizontal_header_location" class="d_location_navigation_left">		
+                                <!-- <div id="horizontal_header_location" class="d_location_navigation_left">		
                                     <div class="my_nearest_city"><a href="">My Nearest City</a></div>
                                     <ul class="horizontal_location_nav">						
                                         <li class="cities_names"><a href="">London</a></li>
@@ -82,7 +115,7 @@
                                         <li class="cities_names"><a href="">Paris</a></li>
                                         <li class="cities_names"><a href="">San Francisco</a></li>		
                                     </ul>
-                                </div>
+                                </div> -->
                                 <div id="location_loading" style="display: none;"><i class="fa fa-circle-o-notch fa-spin"></i></div>
                             </div>
                         </div>
@@ -109,18 +142,18 @@
                                     <li data-toggle="modal" data-target="#loginModal" id="signInFormModal" class="tmpl-login" *ngIf = "!getToken"><a>Sign In</a></li>
                                     <!--<li class="tmpl-login"><a href="">Logout</a></li>-->
                                     <li id="signUpFormModal" data-toggle="modal" data-target="#signupModal" class="tmpl-login" *ngIf = "!getToken"><a>Sign Up</a></li>
-                                    <li class="tmpl-login" *ngIf = "getToken"><a>My Account</a>
+                                   <!--  <li class="tmpl-login" *ngIf = "getToken"><a>My Account</a>
                                         <ul class="sub-menu">
                                             <li class=""><a href="" [routerLink]="['/profile']">Profile</a></li>
                                             <li class=""><a href="" [routerLink]="['/my-organizations']">My Organizations</a></li>
-                                            <!-- <li class=""><a href="" [routerLink]="['/my-venues']">My Venue's</a></li> -->
+                                            <li class=""><a href="" [routerLink]="['/my-venues']">My Venue's</a></li>
                                             <li class=""><a href="" [routerLink]="['/my-events']">My Events</a></li>
                                             <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li>
                                             <li class=""><a href="" [routerLink]="['/notification-setting']">Notification Settings</a></li> 
                                             <li class=""><a href="" [routerLink]="['/changepassword']">Change Password</a></li>
                                             <li class="" (click) = "userLogout()"><a>Logout</a></li>
                                         </ul>
-                                    </li>
+                                    </li> -->
                                 </ul>
                             </div>            
                         </nav>
