--- a/src/app/view/forget-password/forget-password.component.html
+++ b/src/app/view/forget-password/forget-password.component.html
@@ -29,7 +29,7 @@
                         </ul>
                     </div>
                     <div class="form_row ">
-                        <button class="btn btn-info" type="submit">Save</button>
+                        <button class="btn btn-info" type="submit">Send</button>
                         <button class="btn btn-info" type="reset" [routerLink]="['/']" >Cancel</button>
                     </div>
                 </div>
