search code by zipcode

--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -97,12 +97,12 @@
                       
                         <div id="loc_city_link" class="toggle_handler primary_location" data-location="location_aslink">
                             <a id="directorytab"  class="">
-                               <!--  <ng-select id="countryList" name="countryList" 
+                                <ng-select id="countryList" name="countryList" 
                                 (data)="countryArr"                                                      
                             [items]="countryArr"                           
                             (selected)="changeCountry($event)"
                             placeholder="No country selected">
-                            </ng-select> -->
+                            </ng-select>
                                 </a>
                         </div>
                         <div id="directory_location_navigation" class="d_location_type_navigation clearfix">
