--- a/src/app/view/search/search.component.html
+++ b/src/app/view/search/search.component.html
@@ -142,7 +142,7 @@
                      
                 </div>
                 <div class="widget-wrap widget-inside" *ngIf="empty">
-                <h4 style="text-align: center;">No Result Found</h4>
+                <h4 style="text-align: center;">No Result Found for "{{text}}"</h4>
                 </div>
             </div>
 
